@@ -3,11 +3,10 @@
   = hidden_field_tag "contact",  "#{@contact.id  if @contact}"
   = hidden_field_tag "campaign", "#{@campaign.id if @campaign}"
   = f.hidden_field :user_id
-  = f.hidden_field :assigned_to
   = f.error_messages
   = render :partial => "opportunities/top_section", :locals => { :f => f }
   = render :partial => "opportunities/permissions", :locals => { :f => f }
   .buttonbar
-    = f.submit "Create Opportunity", :onclick => %/$("opportunity_assigned_to").value = $F("account_assigned_to"); if ($("account_id").visible()) { $("account_id").enable(); }/
+    = f.submit "Create Opportunity", :onclick => %/$("account_assigned_to").value = $F("opportunity_assigned_to"); if ($("account_id").visible()) { $("account_id").enable(); }/
     or
     = link_to_cancel new_opportunity_path
