@@ -2,12 +2,11 @@
   = link_to_close edit_opportunity_path(@opportunity)
   - remote_form_for(@opportunity) do |f|
     = f.hidden_field :user_id
-    = f.hidden_field :assigned_to
     = f.hidden_field :campaign_id
     = f.error_messages
     = render :partial => "opportunities/top_section", :locals => { :f => f, :edit => true }
     = render :partial => "opportunities/permissions", :locals => { :f => f, :edit => true }
     .buttonbar
-      = f.submit "Save Opportunity", :onclick => %/$("opportunity_assigned_to").value = $F("account_assigned_to");/
+      = f.submit "Save Opportunity", :onclick => %/$("account_assigned_to").value = $F("opportunity_assigned_to");/
       or
       = link_to_cancel edit_opportunity_path(@opportunity)
